--- a/assets/main.css
+++ b/assets/main.css
@@ -97,9 +97,6 @@ display: grid;
   width: auto;
 }
 
-#cursor {
-  display: none;
-}
 
 #text-1 {
 
@@ -194,13 +191,6 @@ a {
   color: white;
 }
 
-.cursor {
-  width: 800px;
-  height: 500px;
-  background: blue;
-  cursor: none;
-
-}
 
 
 @media only screen and (min-width: 800px) {
@@ -402,6 +392,14 @@ opacity: 0.75;
 
 
 }
+}
+
+
+@media (max-width: 600px) {
+  #cursor {
+  display: none;
+}
+
 }
 
 
